# load("@pip_deps//:requirements.bzl", "requirement")
load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
# load("@io_bazel_rules_docker//python3:image.bzl", py_image = "py3_image")
# load("@io_bazel_rules_docker//container:container.bzl", "container_push")

py_library(
    name = "app_lib",
    srcs = [
        "app/__init__.py",
        "app/app.py",
    ],
    deps = [
        "//libs/py/calculator:calculator_lib",
        # requirement("click"),
        # requirement("colorama"),
    ],
)

py_binary(
    name = "app_bin",
    srcs = ["app/app.py"],
    main = "app.py",
    deps = [":app_lib"],
)

py_test(
    name = "app_test",
    srcs = [
        "tests/__init__.py",
        "tests/test_app.py",
    ],
    main = "tests/test_app.py",
    deps = [
        ":app_lib",
        "//libs/py/calculator:calculator_lib",
        requirement("pytest"),
        # requirement("pytest-cov"),
    ],
)

# Test suite for CI/CD pipeline consistency
test_suite(
    name = "all_tests",
    tests = [
        ":app_test",
    ],
)

# py_image(
#     name = "python_web_image",
#     srcs = ["python_web.py"],
#     main = "python_web.py",
#     deps = [":python_web_lib"],
# )

# container_push(
#     name = "publish",
#     format = "Docker",
#     image = ":python_web_image",
#     registry = "registry.hub.docker.com",
#     repository = "krisfoster96/monorepo-python-web",
#     tag = "1",
# )
