# See https://bazel.build/concepts/build-files

load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

py_library(
    name = "base_lib",
    srcs = glob(["app/*.py", "app/__init__.py"]),
    imports = ["."],
    deps = [
        "//libs/py/devops:devops_lib",
        # Removed FastAPI dependency
        # "//projects/base/base_fastapi_app:fastapi_lib",
    ],
)

# to add additionals parameters place them after "--" in bazel call, like:
# `bazel run //webapp:run -- --reload`
py_binary(
    name = "run_bin",
    srcs = glob(["bin/*.py", "bin/__init__.py", "__init__.py"]),
    main = "bin/run_bin.py",
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":base_lib",
    ],
)

py_test(
    name = "main_test",
    srcs = glob(["tests/*.py"]),
    timeout = "short",
    imports = ["."],
    deps = [
        ":base_lib",
        ":run_bin",
    ],
)

platform(
    name = "aarch64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "x86_64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
