# See https://bazel.build/concepts/build-files

load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "base_lib",
    srcs = glob(["app/**/*.py"]),
    imports = ["."],
    deps = [
        "//libs/py/devops:devops_lib",
        requirement("fastapi"),
        requirement("pydantic"),
        requirement("uvicorn"),
    ],
)

# to add additionals parameters place them after "--" in bazel call, like:
# `bazel run //webapp:run -- --reload`
py_binary(
    name = "run_bin",
    srcs = glob(["bin/**/*.py"]),
    imports = ["."],
    main = "bin/run_bin.py",
    deps = [
        ":base_lib",
        requirement("fastapi"),
        requirement("pydantic"),
        requirement("uvicorn"),
    ],
)

py_test(
    name = "main_test",
    srcs = glob(["tests/**/*.py"]),
    deps = [
        ":base_lib",
        ":run_bin",
        requirement("fastapi"),
        requirement("httpx"),  # Required for TestClient
    ],
)

platform(
    name = "aarch64_linux",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)
